--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "npm run build",
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
