--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "DONE \r yara \r mariam \r haidy \r mayada\r shrouk \r haidy done",
   "main": "index.js",
   "scripts": {
-    "build": "cd server && npm install && cd .. && client && npm install && npm run build ",
+    "build": "cd server && npm install  && cd ../client && npm install && npm run build ",
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/yaramohamed209/Egyption-Monuments-with-Unique-QR-code/issues"
   },
-  "homepage": "https://github.com/yaramohamed209/Egyption-Monuments-with-Unique-QR-code#readme"
+  "homepage": "https://github.com/yaramohamed209/Egyption-Monuments-with-Unique-QR-code#readme",
+  "dependencies": {
+    "path": "^0.12.7"
+  }
 }
