--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "counterpart": "^0.18.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-interpolate-component": "^0.12.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-translate-component": "^0.15.1",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
