--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
     "react-interpolate-component": "^0.12.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.1",
     "react-speech-kit": "^3.0.1",
     "react-translate-component": "^0.15.1",
     "use-reducer-logger": "^1.0.2",
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
