--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/yaramohamed209/Egyption-Monuments-with-Unique-QR-code#readme",
   "dependencies": {
+    "express": "^4.18.2",
+    "hbs": "^4.2.0",
+    "mongoose": "^6.10.0",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "react-speech-kit": "^3.0.1"
   }
