--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mongoose": "^6.10.0",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
-    "react-speech-kit": "^3.0.1",
-    "swiper": "^6.8.4"
+    "react-speech-kit": "^3.0.1"
+    
   }
 }
